Limit /api/scan concurrency to 4 threads to avoid Angel One rate limiting
All 20 stocks firing simultaneously caused Angel One to return empty
data for some symbols. Fixed thread pool of 4 keeps throughput high
while staying within Angel One's API limits.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>